--- a/styles.scss
+++ b/styles.scss
@@ -120,7 +120,7 @@ pre {
 }
 
 .about-visible .nav-about,
-.whats-new-visible .nav-new,
+.get-started-visible .nav-started,
 .shortcuts-examples-visible .nav-shortcuts,
 .docs-visible .nav-docs {
   background:#000;
@@ -132,11 +132,9 @@ pre {
 
   .inner {
     width:400px;
+    margin:60px auto;
     padding-right:160px;
-    position:absolute;
-    left:50%;
-    top:50%;
-    margin:-60px 0 0 -280px;
+    position:relative;
   }
 
   ul {
@@ -157,6 +155,16 @@ pre {
       }
     }
   }
+
+  .row {
+    width:520px;
+    overflow:hidden;
+    margin-left:20px;
+
+    &.first {
+      border-bottom:1px solid #000;
+    }
+  }
 }
 
 .about-download:before {
@@ -175,25 +183,12 @@ pre {
   content:'\f0e3';
 }
 
-#whats-new {
-  left:100%;
-
-  .inner {
-    position:absolute;
-    width:520px;
-    margin:-160px 0 0 -260px;
-    left:50%;
-    top:50%;
-  }
-
-  .row {
-    width:100%;
-    overflow:hidden;
-
-    &:first-child {
-      border-bottom:1px solid #000;
-    }
-  }
+.new-in-2 {
+  width:560px;
+  background:#000;
+  color:#fff;
+  text-align:center;
+  margin-top:32px;
 }
 
 .new-panel {
@@ -231,6 +226,16 @@ pre {
 .new-api {
   > h2:before {
     content:'\f040';
+  }
+}
+
+#get-started {
+  left:100%;
+
+  .inner {
+    width:620px;
+    margin:60px auto;
+    padding-bottom:400px;
   }
 }
 
